force-app/package/data-model/objects/Parent_Test_sObject__c/Parent_Test_sObject__c.object-meta.xml
<CustomObject>
    <description>An sObject that is specifically designed for testing purposes only so that Salesforce Records can be tested fully org agnostic.</description>
    <label>Parent Test sObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Test sObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>