force-app/package/data-model/objects/Parent_Test_sObject__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>P-{000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>