force-app/package/data-model/objects/Parent_Test_sObject__c/fields/Decimal__c.field-meta.xml
<CustomField>
    <fullName>Decimal__c</fullName>
    <label>Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>