force-app/package/data-model/objects/Parent_Test_sObject__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>Name</formula>
    <label>Formula</label>
    <type>Text</type>
</CustomField>