force-app/package/data-model/objects/Parent_Test_sObject__c/fields/Multi_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Multi_Picklist__c</fullName>
    <label>Multi Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>