force-app/package/data-model/objects/Parent_Test_sObject__c/fields/Primary_Child_Test_sObject__c.field-meta.xml
<CustomField>
    <fullName>Primary_Child_Test_sObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Child Test sObject</label>
    <referenceTo>Child_Test_sObject__c</referenceTo>
    <relationshipLabel>Primary Parent Test sObjects</relationshipLabel>
    <relationshipName>Primary_Parent_Test_sObjects</relationshipName>
    <type>Lookup</type>
</CustomField>