force-app/package/data-model/objects/Parent_Test_sObject__c/fields/Self_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Self_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Self Lookup</label>
    <referenceTo>Parent_Test_sObject__c</referenceTo>
    <relationshipLabel>Parent_Test_sObject</relationshipLabel>
    <relationshipName>Parent_Test_sObject</relationshipName>
    <type>Lookup</type>
</CustomField>